--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -14,7 +14,7 @@
   top: 0
   bottom: 0
   width: 22em
-  background: #ECEADF
+  background: #BEC406
   border-right: 1px solid #ddd
   z-index: 1
   overflow: auto
